# PurC-Midnight-Commander

./: CMakeLists.txt  README.md
source/cmake/: FindGLIB.cmake  GlobalCCache.cmake  GlobalCompilerFlags.cmake  GlobalFS.cmake  GlobalFeatures.cmake  GlobalPackaging.cmake  OptionsLinux.cmake  OptionsMac.cmake
source/doc/man/: purcmcview.1.in
source/lib/: MyMacros.cmake  config.h
source/lib/lib/: global.c  hiboxcompat.h  hook.c  hook.h  keybind.h  md5.c  purcrdr.h  sorted-array.c  sorted-array.h  util.h
source/lib/lib/event/: event.c
source/lib/lib/purcrdr/: helpers.c  message.c  purcrdr.c
source/lib/lib/tty/: key.c
source/lib/lib/widget/: dialog.c
source/wtf/wtf/: CMakeLists.txt
src/: CMakeLists.txt
src/cmake/: FindNcurses.cmake  GlobalCommon.cmake  GlobalCompilerFlags.cmake  GlobalDist.cmake  GlobalFS.cmake  GlobalFeatures.cmake  GlobalFindPackage.cmake  GlobalMacros.cmake  OptionsAppleWin.cmake  OptionsCommon.cmake  OptionsLinux.cmake  OptionsMSVC.cmake  OptionsMac.cmake  OptionsWin.cmake  OptionsWindows.cmake
src/doc/: CMakeLists.txt
src/doc/man/: purcmc.1.in  purcmcedit.1.in  purcmcview.1.in
src/lib/: CMakeLists.txt  config.h  purcmc_features.h.in  purcmc_version.h.in
src/lib/lib/: fileloc.h  global.h  gslist.h  md5.h  sorted-array.c  sorted-array.h  util.c
src/lib/lib/strutil/: strverscmp.c
src/lib/opt/: charsets.c
src/misc/: CMakeLists.txt
src/purcmc/: CMakeLists.txt  config.h  purcmc_features.h.in
src/purcmc/lib/: global.c
